spaceebi mnishvnelovaniagit add .

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>davaleba</title>
     <link rel="stylesheet" href="index.css" class="conncet">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <div class="main-container">
@@ -48,7 +49,7 @@
     <ul class="list">
         
         <li>Dedicated</li>
-        <li class="wrap">Simple horizontal              scalability</li>
+        <li class="wrap">Simple horizontal scalability</li>
     </ul>
     <span>$400</span>
     <a href="trial" class="trial">
