--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>davaleba</title>
     <link rel="stylesheet" href="index.css" class="conncet">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
 </head>
 <body>
 <div class="main-container">
